--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,25 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Campgrounds</title>
-</head>
-<body>
-    <form action="/campgrounds" method="POST">
-        <h2>New Campground</h2>
-        <div>
-            <label for="title">Title</label>
-            <input type="text" id="title" name="campground[title]">
-        </div>
-        <div>
-            <label for="location">Location</label>
-            <input type="text" id="location" name="campground[location]">
-        </div>
-        <button>Add Campground</button>
-    </form>
-    <footer>
-        <a href="/campgrounds">All Campgrounds</a>
-    </footer>
-</body>
-</html>
+<%- layout('layouts/boilerplate') %>
+    
+
+<div class="row">
+    <h1 class="text-center">New Campground</h1>
+    <div class="col-6 offset-3">
+        <form action="/campgrounds" method="POST">
+       
+            <div class="mb-3">
+                <label for="title" class="form-label">Title</label>
+                <input type="text" id="title" name="campground[title]" class="form-control">
+            </div>
+            <div class="mb-3">
+                <label for="location" class="form-label">Location</label>
+                <input type="text" id="location" name="campground[location]" class="form-control">
+            </div>
+            <div class="mb-3">
+                <label for="price" class="form-label">Price</label>
+                <div class="input-group mb-3">
+                    
+                    <span class="input-group-text" id="price-label">$</span>
+                    <input type="text" class="form-control" placeholder="0.00" aria-label="price" aria-describedby="price-label" id="price" name="campground[price]">
+                  </div>
+            </div>
+           
+            <div class="mb-3">
+                <label for="image" class="form-label">Image</label>
+                <input type="text" id="image" name="campground[image]" class="form-control">
+            </div>
+            <div class="mb-3">
+                <label for="description" class="form-label">Description</label>
+                <textarea type="text" id="description" name="campground[description]" class="form-control"></textarea>
+            </div>
+            <div class="mb-3"> <button class="btn btn-success">Add Campground</button></div>
+           
+        </form>
+    </div>
+</div>
