--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,7 +1,8 @@
 <%- layout('layouts/boilerplate') %>
 
 <div class="row">
-    <div class="col-6 offset-3">
+   
+    <div class="col-6 ">
         <div class="card mb-5">
             <img src="<%= campground.image %>" class="card-img-top" alt="...">
             <div class="card-body">
@@ -23,5 +24,38 @@
                 2 days ago
               </div>
           </div>
+         
     </div>
+
+    <div class="col-6">
+        <h2>Leave a Review</h2>
+        <form action="/campgrounds/<%= campground._id%>/reviews" method="POST" class="mb-3 validated-form" novalidate>
+          <div class="mb-3">
+              <label for="rating" class="form-label">Rating</label>
+              <input type="range" min="1" max="5" name="review[rating]" id="rating" class="form-range">
+
+          </div>
+          <div class="mb-3">
+              <label class="form-label" for="body">Review:</label>
+              <textarea class="form-control" name="review[body]" id="body" required></textarea>
+              <div class="valid-feedback">Looks good!</div>
+              <div class="invalid-feedback">Review cannot be empty</div>
+          </div>
+          <button class="btn btn-primary">Submit Review</button>
+      </form>
+      
+        <% for(let review of campground.reviews) { %>
+            <div class="card mb-3">
+                <div class="card-body">
+                    <h5 class="card-title">Rating: <%- review.rating %></h5>
+                    <p class="card-text">Review: <%- review.body %></p>
+                    <form action="/campgrounds/<%=campground._id %>/reviews/<%=review._id %>?_method=DELETE" method="POST">
+                        <button class="btn btn-danger">Delete</button>
+                    </form>
+                </div>
+            </div>
+            <% } %>
+
+    </div>
+
 </div>
